cranked up permgen for scala integration tests
-should allow us to run AntScalaCompilerIntegrationTest against multiple Scala versions